Bug 1686123: Fall back to ARIAGrid*Accessible for HTML table/tbody/thead/tr/td/th elements with no frame. r=morgan

display: contents means there is no frame, which means we can't use HTMLTable*Accessible.
However, we can (and should) use ARIAGrid*Accessible in this case.

Differential Revision: https://phabricator.services.mozilla.com/D107407